logs/dag_id=Projet1/run_id=manual__2023-11-24T14:20:51.884465+00:00/task_id=create_table/attempt=1.log
[2023-11-24T14:20:54.083+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Projet1.create_table manual__2023-11-24T14:20:51.884465+00:00 [queued]>
[2023-11-24T14:20:54.097+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Projet1.create_table manual__2023-11-24T14:20:51.884465+00:00 [queued]>
[2023-11-24T14:20:54.098+0000] {taskinstance.py:1361} INFO - Starting attempt 1 of 2
[2023-11-24T14:20:54.114+0000] {taskinstance.py:1382} INFO - Executing <Task(PostgresOperator): create_table> on 2023-11-24 14:20:51.884465+00:00
[2023-11-24T14:20:54.123+0000] {standard_task_runner.py:57} INFO - Started process 4509 to run task
[2023-11-24T14:20:54.126+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'Projet1', 'create_table', 'manual__2023-11-24T14:20:51.884465+00:00', '--job-id', '873', '--raw', '--subdir', 'DAGS_FOLDER/Projet.py', '--cfg-path', '/tmp/tmpj1ktr0me']
[2023-11-24T14:20:54.128+0000] {standard_task_runner.py:85} INFO - Job 873: Subtask create_table
[2023-11-24T14:20:54.180+0000] {task_command.py:416} INFO - Running <TaskInstance: Projet1.create_table manual__2023-11-24T14:20:51.884465+00:00 [running]> on host b36ebcee5948
[2023-11-24T14:20:54.271+0000] {taskinstance.py:1662} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='Projet1' AIRFLOW_CTX_TASK_ID='create_table' AIRFLOW_CTX_EXECUTION_DATE='2023-11-24T14:20:51.884465+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-11-24T14:20:51.884465+00:00'
[2023-11-24T14:20:54.274+0000] {sql.py:274} INFO - Executing: -- Suppression des tables s'ils existent
DROP TABLE IF EXISTS "Urgence";
DROP TABLE IF EXISTS "Age";
DROP TABLE IF EXISTS "Departement";

-- -- Supprimer toutes les contraintes de clé étrangère liées à la table "urgence"
ALTER TABLE Urgences DROP CONSTRAINT Urgences_dep_fkey FOREIGN KEY /* nom_de_la_contrainte_fk */;

ALTER TABLE Urgences DROP CONSTRAINT Urgences_age_fkey FOREIGN KEY (sursaud_cl_age_corona)
-- -- Supprimer la table "urgence"
-- DROP TABLE IF EXISTS Urgences;

-- -- Supprimer toutes les contraintes de clé étrangère liées à la table "ages"
-- ALTER TABLE Ages DROP CONSTRAINT /* nom_de_la_contrainte_fk */;

-- -- Supprimer la table "ages"
-- DROP TABLE IF EXISTS Ages;

-- -- Supprimer toutes les contraintes de clé étrangère liées à la table "departement"
-- ALTER TABLE Departements DROP CONSTRAINT ;

-- -- Supprimer la table "departement"
-- DROP TABLE IF EXISTS Departements;

-- -- Supprimer toutes les contraintes de clé étrangère liées à la table "departement"
-- ALTER TABLE Age DROP CONSTRAINT ;

-- -- Supprimer la table "departement"
-- DROP TABLE IF EXISTS Age;






-- -- Création des tables

-- CREATE TABLE "Departements"
-- (
--     num_dep VARCHAR(255) PRIMARY KEY,
--     dep_name VARCHAR(255),
--     region_name VARCHAR(255)
-- );

-- CREATE TABLE "Ages"
-- (
--     Code_age integer PRIMARY KEY,
--     Agess VARCHAR(255)
-- );

-- -- CREATE TABLE "passage_urgence"
-- -- (
-- --    num_dep 
-- --    DATA
-- --    tranche_age
-- --    );

-- -- CREATE TABLE "hospitalisation"
-- --    num_dep
-- --    date
-- --    );


-- CREATE TABLE "Urgences"
-- (
--     dep VARCHAR(255),
--     date_de_passage date ,
--     sursaud_cl_age_corona integer , 
--     nbre_pass_corona FLOAT, 
--     nbre_pass_tot FLOAT, 
--     nbre_hospit_corona FLOAT,
--     nbre_pass_corona_h FLOAT, 
--     nbre_pass_corona_f FLOAT, 
--     nbre_pass_tot_h FLOAT, 
--     nbre_pass_tot_f FLOAT,
--     nbre_hospit_corona_h FLOAT, 
--     nbre_hospit_corona_f FLOAT, 
--     nbre_acte_corona FLOAT, 
--     nbre_acte_tot FLOAT,
--     nbre_acte_corona_h FLOAT, 
--     nbre_acte_corona_f FLOAT, 
--     nbre_acte_tot_h FLOAT, 
--     nbre_acte_tot_f FLOAT
-- );

-- -- Ajout des contraintes de clé étrangère
-- ALTER TABLE "Urgences" ADD CONSTRAINT Urgences_dep_fkey FOREIGN KEY (dep) REFERENCES "Departements"(num_dep);
-- ALTER TABLE "Urgences" ADD CONSTRAINT Urgences_age_fkey FOREIGN KEY (sursaud_cl_age_corona) REFERENCES "Ages"(Code_age);

[2023-11-24T14:20:54.284+0000] {base.py:73} INFO - Using connection ID 'postgres_connexion' for task execution.
[2023-11-24T14:20:54.292+0000] {base.py:73} INFO - Using connection ID 'postgres_connexion' for task execution.
[2023-11-24T14:20:54.303+0000] {sql.py:418} INFO - Running statement: -- Suppression des tables s'ils existent
DROP TABLE IF EXISTS "Urgence";
DROP TABLE IF EXISTS "Age";
DROP TABLE IF EXISTS "Departement";

-- -- Supprimer toutes les contraintes de clé étrangère liées à la table "urgence"
ALTER TABLE Urgences DROP CONSTRAINT Urgences_dep_fkey FOREIGN KEY /* nom_de_la_contrainte_fk */;

ALTER TABLE Urgences DROP CONSTRAINT Urgences_age_fkey FOREIGN KEY (sursaud_cl_age_corona)
-- -- Supprimer la table "urgence"
-- DROP TABLE IF EXISTS Urgences;

-- -- Supprimer toutes les contraintes de clé étrangère liées à la table "ages"
-- ALTER TABLE Ages DROP CONSTRAINT /* nom_de_la_contrainte_fk */;

-- -- Supprimer la table "ages"
-- DROP TABLE IF EXISTS Ages;

-- -- Supprimer toutes les contraintes de clé étrangère liées à la table "departement"
-- ALTER TABLE Departements DROP CONSTRAINT ;

-- -- Supprimer la table "departement"
-- DROP TABLE IF EXISTS Departements;

-- -- Supprimer toutes les contraintes de clé étrangère liées à la table "departement"
-- ALTER TABLE Age DROP CONSTRAINT ;

-- -- Supprimer la table "departement"
-- DROP TABLE IF EXISTS Age;






-- -- Création des tables

-- CREATE TABLE "Departements"
-- (
--     num_dep VARCHAR(255) PRIMARY KEY,
--     dep_name VARCHAR(255),
--     region_name VARCHAR(255)
-- );

-- CREATE TABLE "Ages"
-- (
--     Code_age integer PRIMARY KEY,
--     Agess VARCHAR(255)
-- );

-- -- CREATE TABLE "passage_urgence"
-- -- (
-- --    num_dep 
-- --    DATA
-- --    tranche_age
-- --    );

-- -- CREATE TABLE "hospitalisation"
-- --    num_dep
-- --    date
-- --    );


-- CREATE TABLE "Urgences"
-- (
--     dep VARCHAR(255),
--     date_de_passage date ,
--     sursaud_cl_age_corona integer , 
--     nbre_pass_corona FLOAT, 
--     nbre_pass_tot FLOAT, 
--     nbre_hospit_corona FLOAT,
--     nbre_pass_corona_h FLOAT, 
--     nbre_pass_corona_f FLOAT, 
--     nbre_pass_tot_h FLOAT, 
--     nbre_pass_tot_f FLOAT,
--     nbre_hospit_corona_h FLOAT, 
--     nbre_hospit_corona_f FLOAT, 
--     nbre_acte_corona FLOAT, 
--     nbre_acte_tot FLOAT,
--     nbre_acte_corona_h FLOAT, 
--     nbre_acte_corona_f FLOAT, 
--     nbre_acte_tot_h FLOAT, 
--     nbre_acte_tot_f FLOAT
-- );

-- -- Ajout des contraintes de clé étrangère
-- ALTER TABLE "Urgences" ADD CONSTRAINT Urgences_dep_fkey FOREIGN KEY (dep) REFERENCES "Departements"(num_dep);
-- ALTER TABLE "Urgences" ADD CONSTRAINT Urgences_age_fkey FOREIGN KEY (sursaud_cl_age_corona) REFERENCES "Ages"(Code_age);
, parameters: None
[2023-11-24T14:20:54.324+0000] {taskinstance.py:1937} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 280, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "FOREIGN"
LINE 7: ... TABLE Urgences DROP CONSTRAINT Urgences_dep_fkey FOREIGN KE...
                                                             ^

[2023-11-24T14:20:54.340+0000] {taskinstance.py:1400} INFO - Marking task as UP_FOR_RETRY. dag_id=Projet1, task_id=create_table, execution_date=20231124T142051, start_date=20231124T142054, end_date=20231124T142054
[2023-11-24T14:20:54.355+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 873 for task create_table (syntax error at or near "FOREIGN"
LINE 7: ... TABLE Urgences DROP CONSTRAINT Urgences_dep_fkey FOREIGN KE...
                                                             ^
; 4509)
[2023-11-24T14:20:54.381+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-11-24T14:20:54.409+0000] {taskinstance.py:2778} INFO - 0 downstream tasks scheduled from follow-on schedule check
